# 24124032_CSOC_IG

./: README.md  main.py  pyproject.toml
Prerequisite/: EDA.ipynb  libs_regression.ipynb  pure_python_regression.ipynb  sklearn_regression.ipynb
Reinforcement-Learning/MDP/: frozen_lake.ipynb
Reinforcement-Learning/Monte Carlo and TD Learning/: blackjack.ipynb  cliff_walking.ipynb  monte_td.ipynb
Vanilla Neural Networks/: ANN.ipynb  EDA.ipynb  pytorch.ipynb  scores vs architecture.txt
